@@ -91,7 +91,7 @@ tutorial=Tutorial
 interactive_tutorial_title=Interactive Tutorial
 interactive_tutorial_text=The best way to familiarize yourself with Factory Planner is by just jumping right in and exploring it yourself. To that end, I have included an example factory that will show off some of this mod’s most important features. You can add it by clicking the button below. You can also activate [font=default-semibold]Tutorial Mode[/font], which shows all the keyboard combinations that are possible on important buttons all over the interface.
 create_example=Create example
-create_example_error=The example factory can’t be created because it is not compatible with the current set of mods
+create_example_error=The example factory can’t be created because it is not compatible with the current set of mods.
 tutorial_mode=Tutorial Mode
 interface_tutorial_title=Interactions
 interface_tutorial_text=The interface is set up so similar actions share the same shortcuts, making it easier to get an intuitive feel for how to achieve certain results. You’ll just have to internalize these basic interactions, then use them everywhere:
